--- a/src/index.html
+++ b/src/index.html
@@ -8,11 +8,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
+  <script src="env.js"></script>
 </head>
 
 <body>
   <app-root></app-root>
 </body>
 
+
+</script>
 
 </html>
